@@ -1,3 +1,3 @@
 cdecl> cast x into
                   ^
-12: syntax error: "as", "into", or "to" expected
+data/cast_x.cdecl:1,12: syntax error: "as", "into", or "to" expected
