@@ -1,3 +1,3 @@
 cdecl> declare x int
                  ^
-11: syntax error: "int": "as" expected ("int" is a keyword)
+data/declare_x.cdecl:1,11: syntax error: "int": "as" expected ("int" is a keyword)
