@@ -1,3 +1,3 @@
 cdecl> explain x
                ^
-9: error: "x": unknown name
+data/explain_x.cdecl:1,9: error: "x": unknown name
